--- a/spark-contest/pom.xml
+++ b/spark-contest/pom.xml
@@ -146,6 +146,11 @@
       <groupId>org.bdgenomics.adam</groupId>
       <artifactId>adam-apis_2.10</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.bdgenomics.avocado</groupId>
+      <artifactId>avocado-core</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.bdgenomics.adam</groupId>
       <artifactId>adam-apis_2.10</artifactId>
