--- a/spark-contest/pom.xml
+++ b/spark-contest/pom.xml
@@ -174,6 +174,14 @@
       <artifactId>scalatest_2.10</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.bdgenomics.cloudpilot</groupId>
+      <artifactId>jcontest</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
   <profiles>
     <profile>
